# royalnet

./: .dockerignore  .editorconfig  .example.env  .gitattributes  .gitignore  .travis.yml  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  adventure.bat  adventuremode.py  basicbot.py  bot.py  brawlhalla.py  database.py  db.json  db.py  dbeditingtool.py  diesel.toml  edit.py  extra_discord.py  grandbot.py  league.py  lol.py  main.py  opendota.py  osu.py  overwatch.py  publish.bat  pyproject.toml  requirements.txt  royalbot.py  royalbotconfig.py  run.bat  run.sh  send.bat  setup.py  steam.py  strings.py  (+3 more)
.github/workflows/: release.yml  test.yml
examplepack/: version.py
examplepack/commands/: README.md  __init__.py  example.py
examplepack/events/: README.md  __init__.py  example.py
examplepack/stars/: README.md  __init__.py  api_example.py  api_excsample.py  example.py
examplepack/tables/: README.md  __init__.py  example.py
examplepack/types/: README.md
examplepack/utils/: README.md  __init__.py
giftpack/commands/: delgift.py
keipack/: __init__.py  version.py
keipack/commands/: __init__.py
keipack/stars/: __init__.py  api_kei.py
keipack/tables/: __init__.py  keimessages.py  keipeople.py  keiunlocks.py
keipack/utils/: __init__.py  anyinstring.py  conversation.py  emotion.py
markovpack/: version.py
markovpack/commands/: markov.py
migrations/2024-07-03-225728_create_users/: down.sql  up.sql
migrations/2024-07-03-231355_import_users/: down.sql  up.sql
migrations/2024-07-03-233850_view_users/: down.sql  up.sql
migrations/2024-07-15-083921_table_brooch/: down.sql  up.sql
migrations/2024-08-05-131034_add_margold_telegram/: down.sql  up.sql
migrations/2024-08-05-175443_add_diario/: down.sql  up.sql
migrations/2024-08-14-091307_add_matchmaking/: down.sql  up.sql
migrations/2024-08-14-091307_add_matchmaking_events/: down.sql  up.sql
migrations/2024-08-15-022810_add_matchmade/: down.sql  up.sql
migrations/2024-08-16-232632_add_matchmessage_telegram/: down.sql  up.sql
requests/: kei.http
royalherald/: __init__.py  broadcast.py  errors.py  link.py  request.py  response.py  server.py
royalpack/commands/: spell.py  trionfireali.py
royalpack/halloween2020/: check.py  trionfilist.py  trionfistatus.py  trionfoinfo.py
royalpack/stars/: api_user_ryg.py  api_user_ryg_list.py
royalpack/tables/: __init__.py  halloween2020.py  steam.py
royalpack/types/: halloween2020tarots.py
rpgpack/: version.py
rpgpack/commands/: __init__.py  dndaddunit.py  dnddamage.py  dnddeathsave.py  dndextra.py  dndheal.py  dndinfo.py  dndnewbattle.py  dndspell.py  dndstatus.py  testfaction.py  testhealth.py
rpgpack/stars/: api_dnd_character_get.py
rpgpack/tables/: __init__.py  dndactivebattle.py  dndbattle.py  dndbattleunit.py  dndcharacters.py
rpgpack/types/: health.py
rpgpack/utils/: __init__.py  faction.py  factioncolors.py  findunitincurrentbattle.py  getactivechar.py  health.py
src/: main.rs
src/database/: config.rs  mod.rs  models.rs  schema.rs
src/instance/: config.rs  mod.rs
src/interfaces/: mod.rs
src/interfaces/database/: connect.rs  macros.rs  migrations.rs  mod.rs  models.rs  query_prelude.rs  schema.rs
src/interfaces/database/models/: brooch_match.rs  diario.rs  discord.rs  matchmaking_choice.rs  matchmaking_events.rs  matchmaking_messages_telegram.rs  matchmaking_replies.rs  mod.rs  steam.rs  telegram.rs  users.rs
src/interfaces/stratz/: graphql.config.yml  guild_matches.rs  mod.rs  query_guild_matches.gql  schema.json
src/services/: mod.rs
src/services/brooch/: config.rs  mod.rs
src/services/telegram/: config.rs  mod.rs
src/services/telegram/commands/: answer.rs  cat.rs  diario.rs  dog.rs  echo.rs  fortune.rs  help.rs  matchmaking.rs  mod.rs  reminder.rs  roll.rs  start.rs  whoami.rs
src/services/telegram/dependencies/: interface_database.rs
src/services/telegram/keyboard_callbacks/: matchmaking.rs  mod.rs
src/services/telegram/utils/: database.rs  matchmaking.rs  mod.rs
src/stratz/: config.rs  mod.rs  query_guild_matches.gql  schema.json
src/telegram/: config.rs  mod.rs
src/telegram/commands/: answer.rs  echo.rs  fortune.rs  help.rs  mod.rs  reminder.rs  start.rs  whoami.rs
src/utils/: anyhow_result.rs  escape.rs  hacks.rs  italian.rs  matchmaking.rs  mod.rs  result.rs  telegram_string.rs  telegramdisplay.rs  time.rs  version.rs  write.rs
src/utils/matchmaking/: mod.rs
tests/: test_network.py
ty/: Heisenberg.tyr  Nemesis.tyr  Steffo.tyr
wikipack/: version.py
wikipack/stars/: __init__.py  api_wiki.py  api_wiki_list.py
wikipack/tables/: __init__.py  wikideletion.py  wikipage.py  wikirevision.py
{packname}/: __init__.py
{packname}/stars/: __init__.py
