[package]
name = "royalnet"
version = "0.3.1"
edition = "2021"
authors = [
    "Stefano Pigozzi <me@steffo.eu>"
]
rust-version = "1.71.0"

[dependencies]
anyhow = "1.0.86"
chrono = "0.4.38"
diesel = { version = "2.2.1", features = ["postgres"] }
log = { version = "0.4.22", features = ["release_max_level_debug"] }
micronfig = "0.3.0"
pretty_env_logger = "0.5.0"
rand = { version = "0.8.5", features = ["small_rng"] }
teloxide = { version = "0.12.2", features = ["ctrlc_handler", "native-tls", "macros"], default-features = false }
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread", "time"] }
parse_datetime = "0.6.0"
regex = "1.10.5"
once_cell = "1.19.0"

[[bin]]
name = "royalnet"
