[package]
name = "royalnet"
description = "Fun software suite for the RYG community"
version = "0.5.0"
edition = "2021"
authors = [
    "Stefano Pigozzi <me@steffo.eu>"
]
repository = "https://github.com/RYGhub/royalnet"
rust-version = "1.71.0"
readme = "README.md"
license = "EUPL-1.2"
keywords = [
    "bot",
    "telegram",
    "ryg",
    "gaming",
    "fun"
]
categories = [
    "games",
]
exclude = [
    "/.idea",
    "/.media",
    "/.env"
]

#============#

[dependencies]

[dependencies.anyhow]
version = "1.0.86"

[dependencies.thiserror]
version = "1.0.62"

[dependencies.tokio]
version = "1.38.0"
features = ["macros", "rt-multi-thread", "time"]

[dependencies.log]
version = "0.4.22"
features = ["release_max_level_debug"]

[dependencies.pretty_env_logger]
version = "0.5.0"

[dependencies.micronfig]
version = "0.3.0"

[dependencies.once_cell]
version = "1.19.0"

[dependencies.regex]
version = "1.10.5"

[dependencies.reqwest]
version = "0.12.5"
features = ["json"]

[dependencies.serde]
version = "1.0.204"
features = ["derive"]

[dependencies.diesel]
version = "2.2.1"
default-features = false
features = ["postgres", "chrono"]
optional = true

[dependencies.diesel_migrations]
version = "2.2.0"
optional = true

[dependencies.teloxide]
version = "0.13.0"
default-features = false
features = ["native-tls", "macros"]
optional = true

[dependencies.rand]
version = "0.8.5"
features = ["small_rng"]
optional = true

[dependencies.chrono]
version = "0.4.38"
optional = true

[dependencies.parse_datetime]
version = "0.6.0"
optional = true

[dependencies.graphql_client]
version = "0.14.0"
optional = true

#============#

[features]
default = [
    "interface_database",
    # "interface_stratz",
    # "service_brooch",
    "service_telegram",
]
interface_database = [
    "diesel",
    "diesel_migrations",
    "chrono",
]
interface_stratz = [
    "graphql_client"
]
service_telegram = [
    "interface_database",
    "teloxide",
    "rand",
    "parse_datetime",
    "chrono",
]
service_brooch = [
    "interface_database",
    "interface_stratz",
    "graphql_client"
]

#============#

[[bin]]
name = "royalnet"
